@@ -7,4 +7,6 @@ dist-hook:
 	find $(distdir) -type d -name '.svn' | xargs rm -rf
 
 install-exec-hook:
+	$(mkinstalldirs) $(DESTDIR)$(sysconfdir)
 	$(mkinstalldirs) $(DESTDIR)$(localstatedir)/run
+	$(mkinstalldirs) $(DESTDIR)$(localstatedir)/lib/$(PACKAGE_NAME)
