@@ -120,8 +120,10 @@ void exit_usage (char *name)
 			
 			"Available options:\n"
 			"  General:\n"
+			/*
 			"    -C <dir>        Configuration file.\n"
 			"                    Default: %s\n"
+			*/
 			"    -P <file>       PID File.\n"
 			"                    Default: %s\n"
 			"    -M <dir>        Module/Plugin directory.\n"
@@ -214,13 +216,16 @@ int start_server (void)
 }
 #endif /* HAVE_LIBRRD */
 
-int pidfile_create (void)
+int pidfile_create (char *file)
 {
 	FILE *fh;
 
-	if ((fh = fopen (PIDFILE, "w")) == NULL)
+	if (file == NULL)
+		file = PIDFILE;
+
+	if ((fh = fopen (file, "w")) == NULL)
 	{
-		syslog (LOG_ERR, "fopen (pidfile): %s", strerror (errno));
+		syslog (LOG_ERR, "fopen (%s): %s", file, strerror (errno));
 		return (1);
 	}
 
@@ -366,7 +371,7 @@ int main (int argc, char **argv)
 		setsid ();
 
 		/* Write pidfile */
-		if (pidfile_create ())
+		if (pidfile_create (pidfile))
 			exit (2);
 
 		/* close standard descriptors */
